--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Build
-      #   run: npm run build -- --prod
+      - name: Build
+        run: npm run build -- --prod
 
   # deploy:
   #   needs: build
