list dist files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: List dist files
+        run: ls
+
   # deploy:
   #   needs: build
   #   runs-on: ubuntu-latest
