--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,18 @@ jobs:
       - name: List files and cd dist
         run: ls && cd dist && ls
 
-      - name: install aws cli
-        run: sudo apt install awscli && aws --version
+      - name: aws CLI configuration
+        run : |
+          mkdir -p ~/.aws
+          echo "[default]" > ~/.aws/config
+          echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/config
+          echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/config
+          echo "region = us-east-2" >> ~/.aws/config
+
+      - name: Empty AWS S3 bucket
+        run: aws s3 rm s3://paula-pipeline --recursive
+
+
 
 
 
