upload files to S3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Empty AWS S3 bucket
         run: aws s3 rm s3://paula-pipeline --recursive
 
-      # - name: aws s3 upload archives
-      #   run: aws s3 cp ./dist/paula-pipeline/browser s3://paula-pipeline --recursive
+      - name: aws s3 upload archives
+        run: aws s3 cp ./dist/paula-pipeline/browser s3://paula-pipeline --recursive
 
 
 
